--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "gc9a01a_driver"
 version = "0.1.0"
 edition = "2021"
 authors = ["GordonCox"]
+description = "Display Driver to Support for GC9A01A LCD 1.28 inch"
 license = "MIT"
 repository = "https://github.com/GordonCox/gc9a01a_driver.git"
 
